2002-11-23  Andreas Schwab  <schwab@suse.de>

	* m68k-tdep.c (m68k_register_virtual_type): Use architecture
	invariant return values.

2002-11-22  Andreas Schwab  <schwab@suse.de>

	* valops.c (value_slice): Move declaration of `offset' to avoid
	warning.

2002-11-22  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (psapi_get_dll_name): Fix a compiler warning.
	(struct so_stuff): Add end_addr field.
	(register_loaded_dll): Calculate and store end address of loaded dll.
	(solib_address): New function.
	(child_solib_loaded_library_pathname): Pass carefully constructed
	section info to safe_symbol_file_add rather than ignoring it.
	(get_child_debug_event): Call re_enable_breakpoints_in_shlibs when a
	DLL is loaded.
	(do_initial_child_stuff): Call disable_breakpoints_in_shlibs.
	(child_create_inferior): Fix a compiler warning.
	* config/i386/tm-cygwin.h (PC_SOLIB): Define new macro.
	(solib_address): Declare new function.

2002-11-22  Andreas Schwab  <schwab@suse.de>

	* m68k-tdep.c (m68k_register_virtual_type): Return int for SR, FPC
	and FPS registers.

2002-11-21  Daniel Jacobowitz  <drow@mvista.com>

	* maint.c (_initialize_maint_cmds): Fix typo.  From
	Francesco Potorti` <pot@gnu.org>.

2002-11-21  Andrew Cagney  <cagney@redhat.com>

	* mips-tdep.c (mips_dump_tdep): Delete references to
	GDB_TARGET_UNMASK_DISAS_PC and GDB_TARGET_MASK_DISAS_PC.
	* config/mips/tm-mips.h (GDB_TARGET_MASK_DISAS_PC): Delete macro.
	(GDB_TARGET_UNMASK_DISAS_PC): Delete macro.
	* printcmd.c (build_address_symbolic): Delete calls to
	GDB_TARGET_UNMASK_DISAS_PC and GDB_TARGET_MASK_DISAS_PC.
	(address_info): Ditto.
	Fix PR gdb/773.
	
2002-11-19  Klee Dienes  <kdienes@apple.com>
            Adam Fedor  <fedor@gnu.org>

	* completer.c (skip_quoted_chars): Renamed from skip_chars.  Add
	the ability to explicitly specify the quote characters and word
	break characters; if NULL is specified for either, use the old
	behavior of using the characters used by the completer.